tests/cases/generics/errors/generic-aggregate-unknown-type-argument.ari
struct Box[T] {
  value: T,
}

struct Holder {
  value: Box[Missing],
}

fn main() -> i64 {
  return 0;
}
